Add a use counter and histogram to FileReaderSync.

To hopefully eventually facilitate removing FileReaderSync from service
workers this adds both a use counter and histogram to log how often the
API is used in the various worker types.

BUG=688586

Review-Url: https://codereview.chromium.org/2682223006
Cr-Commit-Position: refs/heads/master@{#449833}

Former-commit-id: 77f740e334ba6fdb4d6493372e8009c544939ed4